cmake_minimum_required(VERSION 3.1)
cmake_policy(SET CMP0110 OLD) ## for use [] in test names like "cTools.double.Vec2.[]"

set(PROJECT cTools_Test)
enable_language(C CXX)
project(${PROJECT} CXX)

message("cTools testing enabled")

file(GLOB_RECURSE PROJECT_TEST_SRC_RECURSE 
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp 
	${CMAKE_CURRENT_SOURCE_DIR}/*.h 
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PROJECT_TEST_SRC_RECURSE})
include_directories(${CTOOLS_INCLUDE_DIR})
add_executable(${PROJECT} ${PROJECT_TEST_SRC_RECURSE})
target_link_libraries(${PROJECT} PRIVATE ${CTOOLS_LIBRARIES})
set_target_properties(${PROJECT} PROPERTIES FOLDER Tests)

add_test("FileHelper.1" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "FileHelper.1")
add_test("Logger.1" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "Logger.1")

### TESTS for cTools.Vec2

add_test("cTools.double.Vec2.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.[]")
add_test("cTools.double.Vec2.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.post++")
add_test("cTools.double.Vec2.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.post--")
add_test("cTools.double.Vec2.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.pre++")
add_test("cTools.double.Vec2.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.pre--")
add_test("cTools.double.Vec2.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.+=a")
add_test("cTools.double.Vec2.+=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.+=Vec2")
add_test("cTools.double.Vec2.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.-=a")
add_test("cTools.double.Vec2.-=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.-=Vec2")
add_test("cTools.double.Vec2.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.==a")
add_test("cTools.double.Vec2.==Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.==Vec2")
add_test("cTools.double.Vec2.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.!=a")
add_test("cTools.double.Vec2.!=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.!=Vec2")
add_test("cTools.double.Vec2.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.*=a")
add_test("cTools.double.Vec2.*=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.*=Vec2")
add_test("cTools.double.Vec2./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2./=a")
add_test("cTools.double.Vec2./=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2./=Vec2")
add_test("cTools.double.Vec2.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.lengthSquared")
add_test("cTools.double.Vec2.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.length")
add_test("cTools.double.Vec2.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.normalize")
add_test("cTools.double.Vec2.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.GetNormalized")
add_test("cTools.double.Vec2.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.sum")
add_test("cTools.double.Vec2.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.sumAbs")
add_test("cTools.double.Vec2.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.emptyAND")
add_test("cTools.double.Vec2.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.emptyOR")
add_test("cTools.double.Vec2.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.string")
add_test("cTools.double.Vec2.ratioXY" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.ratioXY")
add_test("cTools.double.Vec2.ratioYX" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.ratioYX")
add_test("cTools.double.Vec2.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.mini")
add_test("cTools.double.Vec2.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec2.maxi")

add_test("cTools.float.Vec2.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.[]")
add_test("cTools.float.Vec2.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.post++")
add_test("cTools.float.Vec2.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.post--")
add_test("cTools.float.Vec2.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.pre++")
add_test("cTools.float.Vec2.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.pre--")
add_test("cTools.float.Vec2.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.+=a")
add_test("cTools.float.Vec2.+=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.+=Vec2")
add_test("cTools.float.Vec2.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.-=a")
add_test("cTools.float.Vec2.-=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.-=Vec2")
add_test("cTools.float.Vec2.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.==a")
add_test("cTools.float.Vec2.==Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.==Vec2")
add_test("cTools.float.Vec2.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.!=a")
add_test("cTools.float.Vec2.!=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.!=Vec2")
add_test("cTools.float.Vec2.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.*=a")
add_test("cTools.float.Vec2.*=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.*=Vec2")
add_test("cTools.float.Vec2./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2./=a")
add_test("cTools.float.Vec2./=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2./=Vec2")
add_test("cTools.float.Vec2.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.lengthSquared")
add_test("cTools.float.Vec2.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.length")
add_test("cTools.float.Vec2.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.normalize")
add_test("cTools.float.Vec2.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.GetNormalized")
add_test("cTools.float.Vec2.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.sum")
add_test("cTools.float.Vec2.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.sumAbs")
add_test("cTools.float.Vec2.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.emptyAND")
add_test("cTools.float.Vec2.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.emptyOR")
add_test("cTools.float.Vec2.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.string")
add_test("cTools.float.Vec2.ratioXY" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.ratioXY")
add_test("cTools.float.Vec2.ratioYX" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.ratioYX")
add_test("cTools.float.Vec2.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.mini")
add_test("cTools.float.Vec2.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec2.maxi")

add_test("cTools.bool.Vec2.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.[]")
add_test("cTools.bool.Vec2.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.==a")
add_test("cTools.bool.Vec2.==Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.==Vec2")
add_test("cTools.bool.Vec2.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.!=a")
add_test("cTools.bool.Vec2.!=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.!=Vec2")
add_test("cTools.bool.Vec2.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.emptyAND")
add_test("cTools.bool.Vec2.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.emptyOR")
add_test("cTools.bool.Vec2.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.string")
add_test("cTools.bool.Vec2.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.mini")
add_test("cTools.bool.Vec2.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec2.maxi")

add_test("cTools.int.Vec2.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.[]")
add_test("cTools.int.Vec2.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.post++")
add_test("cTools.int.Vec2.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.post--")
add_test("cTools.int.Vec2.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.pre++")
add_test("cTools.int.Vec2.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.pre--")
add_test("cTools.int.Vec2.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.+=a")
add_test("cTools.int.Vec2.+=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.+=Vec2")
add_test("cTools.int.Vec2.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.-=a")
add_test("cTools.int.Vec2.-=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.-=Vec2")
add_test("cTools.int.Vec2.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.==a")
add_test("cTools.int.Vec2.==Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.==Vec2")
add_test("cTools.int.Vec2.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.!=a")
add_test("cTools.int.Vec2.!=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.!=Vec2")
add_test("cTools.int.Vec2.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.*=a")
add_test("cTools.int.Vec2.*=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.*=Vec2")
add_test("cTools.int.Vec2./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2./=a")
add_test("cTools.int.Vec2./=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2./=Vec2")
##add_test("cTools.int.Vec2.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.lengthSquared")
##add_test("cTools.int.Vec2.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.length")
##add_test("cTools.int.Vec2.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.normalize")
##add_test("cTools.int.Vec2.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.GetNormalized")
add_test("cTools.int.Vec2.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.sum")
add_test("cTools.int.Vec2.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.sumAbs")
add_test("cTools.int.Vec2.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.emptyAND")
add_test("cTools.int.Vec2.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.emptyOR")
add_test("cTools.int.Vec2.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.string")
##add_test("cTools.int.Vec2.ratioXY" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.ratioXY")
##add_test("cTools.int.Vec2.ratioYX" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.ratioYX")
add_test("cTools.int.Vec2.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.mini")
add_test("cTools.int.Vec2.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec2.maxi")

add_test("cTools.uint.Vec2.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.[]")
add_test("cTools.uint.Vec2.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.post++")
add_test("cTools.uint.Vec2.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.post--")
add_test("cTools.uint.Vec2.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.pre++")
add_test("cTools.uint.Vec2.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.pre--")
add_test("cTools.uint.Vec2.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.+=a")
add_test("cTools.uint.Vec2.+=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.+=Vec2")
add_test("cTools.uint.Vec2.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.-=a")
add_test("cTools.uint.Vec2.-=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.-=Vec2")
add_test("cTools.uint.Vec2.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.==a")
add_test("cTools.uint.Vec2.==Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.==Vec2")
add_test("cTools.uint.Vec2.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.!=a")
add_test("cTools.uint.Vec2.!=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.!=Vec2")
add_test("cTools.uint.Vec2.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.*=a")
add_test("cTools.uint.Vec2.*=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.*=Vec2")
add_test("cTools.uint.Vec2./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2./=a")
add_test("cTools.uint.Vec2./=Vec2" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2./=Vec2")
##add_test("cTools.uint.Vec2.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.lengthSquared")
##add_test("cTools.uint.Vec2.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.length")
##add_test("cTools.uint.Vec2.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.normalize")
##add_test("cTools.uint.Vec2.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.GetNormalized")
add_test("cTools.uint.Vec2.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.sum")
##add_test("cTools.uint.Vec2.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.sumAbs")
add_test("cTools.uint.Vec2.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.emptyAND")
add_test("cTools.uint.Vec2.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.emptyOR")
add_test("cTools.uint.Vec2.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.string")
##add_test("cTools.uint.Vec2.ratioXY" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.ratioXY")
##add_test("cTools.uint.Vec2.ratioYX" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.ratioYX")
add_test("cTools.uint.Vec2.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.mini")
add_test("cTools.uint.Vec2.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec2.maxi")

### TESTS for cTools.Vec3

add_test("cTools.double.Vec3.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.[]")
add_test("cTools.double.Vec3.Offset" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.Offset")
add_test("cTools.double.Vec3.Set" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.Set")
add_test("cTools.double.Vec3.-" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.-")
add_test("cTools.double.Vec3.xy" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.xy")
add_test("cTools.double.Vec3.xz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.xz")
add_test("cTools.double.Vec3.yz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.yz")
add_test("cTools.double.Vec3.yzx" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.yzx")
add_test("cTools.double.Vec3.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.post++")
add_test("cTools.double.Vec3.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.post--")
add_test("cTools.double.Vec3.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.pre++")
add_test("cTools.double.Vec3.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.pre--")
add_test("cTools.double.Vec3.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.+=a")
add_test("cTools.double.Vec3.+=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.+=Vec3")
add_test("cTools.double.Vec3.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.-=a")
add_test("cTools.double.Vec3.-=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.-=Vec3")
add_test("cTools.double.Vec3.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.==a")
add_test("cTools.double.Vec3.==Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.==Vec3")
add_test("cTools.double.Vec3.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.!=a")
add_test("cTools.double.Vec3.!=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.!=Vec3")
add_test("cTools.double.Vec3.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.*=a")
add_test("cTools.double.Vec3.*=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.*=Vec3")
add_test("cTools.double.Vec3./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3./=a")
add_test("cTools.double.Vec3./=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3./=Vec3")
add_test("cTools.double.Vec3.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.lengthSquared")
add_test("cTools.double.Vec3.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.length")
add_test("cTools.double.Vec3.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.normalize")
add_test("cTools.double.Vec3.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.GetNormalized")
add_test("cTools.double.Vec3.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.sum")
add_test("cTools.double.Vec3.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.sumAbs")
add_test("cTools.double.Vec3.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.emptyAND")
add_test("cTools.double.Vec3.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.emptyOR")
add_test("cTools.double.Vec3.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.string")
add_test("cTools.double.Vec3.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.mini")
add_test("cTools.double.Vec3.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec3.maxi")

add_test("cTools.float.Vec3.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.[]")
add_test("cTools.float.Vec3.Offset" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.Offset")
add_test("cTools.float.Vec3.Set" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.Set")
add_test("cTools.float.Vec3.-" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.-")
add_test("cTools.float.Vec3.xy" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.xy")
add_test("cTools.float.Vec3.xz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.xz")
add_test("cTools.float.Vec3.yz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.yz")
add_test("cTools.float.Vec3.yzx" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.yzx")
add_test("cTools.float.Vec3.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.post++")
add_test("cTools.float.Vec3.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.post--")
add_test("cTools.float.Vec3.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.pre++")
add_test("cTools.float.Vec3.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.pre--")
add_test("cTools.float.Vec3.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.+=a")
add_test("cTools.float.Vec3.+=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.+=Vec3")
add_test("cTools.float.Vec3.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.-=a")
add_test("cTools.float.Vec3.-=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.-=Vec3")
add_test("cTools.float.Vec3.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.==a")
add_test("cTools.float.Vec3.==Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.==Vec3")
add_test("cTools.float.Vec3.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.!=a")
add_test("cTools.float.Vec3.!=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.!=Vec3")
add_test("cTools.float.Vec3.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.*=a")
add_test("cTools.float.Vec3.*=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.*=Vec3")
add_test("cTools.float.Vec3./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3./=a")
add_test("cTools.float.Vec3./=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3./=Vec3")
add_test("cTools.float.Vec3.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.lengthSquared")
add_test("cTools.float.Vec3.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.length")
add_test("cTools.float.Vec3.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.normalize")
add_test("cTools.float.Vec3.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.GetNormalized")
add_test("cTools.float.Vec3.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.sum")
add_test("cTools.float.Vec3.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.sumAbs")
add_test("cTools.float.Vec3.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.emptyAND")
add_test("cTools.float.Vec3.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.emptyOR")
add_test("cTools.float.Vec3.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.string")
add_test("cTools.float.Vec3.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.mini")
add_test("cTools.float.Vec3.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec3.maxi")

add_test("cTools.bool.Vec3.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.[]")
add_test("cTools.bool.Vec3.Set" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.Set")
add_test("cTools.bool.Vec3.xy" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.xy")
add_test("cTools.bool.Vec3.xz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.xz")
add_test("cTools.bool.Vec3.yz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.yz")
add_test("cTools.bool.Vec3.yzx" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.yzx")
add_test("cTools.bool.Vec3.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.==a")
add_test("cTools.bool.Vec3.==Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.==Vec3")
add_test("cTools.bool.Vec3.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.!=a")
add_test("cTools.bool.Vec3.!=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.!=Vec3")
add_test("cTools.bool.Vec3.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.emptyAND")
add_test("cTools.bool.Vec3.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.emptyOR")
add_test("cTools.bool.Vec3.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.string")
add_test("cTools.bool.Vec3.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.mini")
add_test("cTools.bool.Vec3.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec3.maxi")

add_test("cTools.int.Vec3.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.[]")
add_test("cTools.int.Vec3.Offset" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.Offset")
add_test("cTools.int.Vec3.Set" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.Set")
add_test("cTools.int.Vec3.-" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.-")
add_test("cTools.int.Vec3.xy" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.xy")
add_test("cTools.int.Vec3.xz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.xz")
add_test("cTools.int.Vec3.yz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.yz")
add_test("cTools.int.Vec3.yzx" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.yzx")
add_test("cTools.int.Vec3.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.post++")
add_test("cTools.int.Vec3.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.post--")
add_test("cTools.int.Vec3.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.pre++")
add_test("cTools.int.Vec3.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.pre--")
add_test("cTools.int.Vec3.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.+=a")
add_test("cTools.int.Vec3.+=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.+=Vec3")
add_test("cTools.int.Vec3.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.-=a")
add_test("cTools.int.Vec3.-=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.-=Vec3")
add_test("cTools.int.Vec3.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.==a")
add_test("cTools.int.Vec3.==Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.==Vec3")
add_test("cTools.int.Vec3.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.!=a")
add_test("cTools.int.Vec3.!=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.!=Vec3")
add_test("cTools.int.Vec3.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.*=a")
add_test("cTools.int.Vec3.*=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.*=Vec3")
add_test("cTools.int.Vec3./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3./=a")
add_test("cTools.int.Vec3./=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3./=Vec3")
##add_test("cTools.int.Vec3.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.lengthSquared")
##add_test("cTools.int.Vec3.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.length")
##add_test("cTools.int.Vec3.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.normalize")
##add_test("cTools.int.Vec3.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.GetNormalized")
add_test("cTools.int.Vec3.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.sum")
add_test("cTools.int.Vec3.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.sumAbs")
add_test("cTools.int.Vec3.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.emptyAND")
add_test("cTools.int.Vec3.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.emptyOR")
add_test("cTools.int.Vec3.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.string")
add_test("cTools.int.Vec3.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.mini")
add_test("cTools.int.Vec3.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec3.maxi")

add_test("cTools.uint.Vec3.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.[]")
add_test("cTools.uint.Vec3.Offset" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.Offset")
add_test("cTools.uint.Vec3.Set" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.Set")
add_test("cTools.uint.Vec3.-" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.-")
add_test("cTools.uint.Vec3.xy" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.xy")
add_test("cTools.uint.Vec3.xz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.xz")
add_test("cTools.uint.Vec3.yz" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.yz")
add_test("cTools.uint.Vec3.yzx" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.yzx")
add_test("cTools.uint.Vec3.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.post++")
add_test("cTools.uint.Vec3.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.post--")
add_test("cTools.uint.Vec3.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.pre++")
add_test("cTools.uint.Vec3.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.pre--")
add_test("cTools.uint.Vec3.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.+=a")
add_test("cTools.uint.Vec3.+=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.+=Vec3")
add_test("cTools.uint.Vec3.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.-=a")
add_test("cTools.uint.Vec3.-=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.-=Vec3")
add_test("cTools.uint.Vec3.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.==a")
add_test("cTools.uint.Vec3.==Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.==Vec3")
add_test("cTools.uint.Vec3.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.!=a")
add_test("cTools.uint.Vec3.!=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.!=Vec3")
add_test("cTools.uint.Vec3.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.*=a")
add_test("cTools.uint.Vec3.*=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.*=Vec3")
add_test("cTools.uint.Vec3./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3./=a")
add_test("cTools.uint.Vec3./=Vec3" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3./=Vec3")
##add_test("cTools.uint.Vec3.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.lengthSquared")
##add_test("cTools.uint.Vec3.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.length")
##add_test("cTools.uint.Vec3.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.normalize")
##add_test("cTools.uint.Vec3.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.GetNormalized")
add_test("cTools.uint.Vec3.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.sum")
##add_test("cTools.uint.Vec3.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.sumAbs")
add_test("cTools.uint.Vec3.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.emptyAND")
add_test("cTools.uint.Vec3.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.emptyOR")
add_test("cTools.uint.Vec3.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.string")
add_test("cTools.uint.Vec3.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.mini")
add_test("cTools.uint.Vec3.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec3.maxi")

### TESTS for cTools.Vec4

add_test("cTools.double.Vec4.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.[]")
add_test("cTools.double.Vec4.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.post++")
add_test("cTools.double.Vec4.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.post--")
add_test("cTools.double.Vec4.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.pre++")
add_test("cTools.double.Vec4.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.pre--")
add_test("cTools.double.Vec4.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.+=a")
add_test("cTools.double.Vec4.+=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.+=Vec4")
add_test("cTools.double.Vec4.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.-=a")
add_test("cTools.double.Vec4.-=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.-=Vec4")
add_test("cTools.double.Vec4.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.==a")
add_test("cTools.double.Vec4.==Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.==Vec4")
add_test("cTools.double.Vec4.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.!=a")
add_test("cTools.double.Vec4.!=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.!=Vec4")
add_test("cTools.double.Vec4.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.*=a")
add_test("cTools.double.Vec4.*=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.*=Vec4")
add_test("cTools.double.Vec4./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4./=a")
add_test("cTools.double.Vec4./=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4./=Vec4")
add_test("cTools.double.Vec4.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.lengthSquared")
add_test("cTools.double.Vec4.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.length")
add_test("cTools.double.Vec4.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.normalize")
add_test("cTools.double.Vec4.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.GetNormalized")
add_test("cTools.double.Vec4.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.sum")
add_test("cTools.double.Vec4.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.sumAbs")
add_test("cTools.double.Vec4.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.emptyAND")
add_test("cTools.double.Vec4.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.emptyOR")
add_test("cTools.double.Vec4.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.string")
add_test("cTools.double.Vec4.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.mini")
add_test("cTools.double.Vec4.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.double.Vec4.maxi")

add_test("cTools.float.Vec4.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.[]")
add_test("cTools.float.Vec4.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.post++")
add_test("cTools.float.Vec4.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.post--")
add_test("cTools.float.Vec4.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.pre++")
add_test("cTools.float.Vec4.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.pre--")
add_test("cTools.float.Vec4.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.+=a")
add_test("cTools.float.Vec4.+=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.+=Vec4")
add_test("cTools.float.Vec4.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.-=a")
add_test("cTools.float.Vec4.-=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.-=Vec4")
add_test("cTools.float.Vec4.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.==a")
add_test("cTools.float.Vec4.==Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.==Vec4")
add_test("cTools.float.Vec4.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.!=a")
add_test("cTools.float.Vec4.!=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.!=Vec4")
add_test("cTools.float.Vec4.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.*=a")
add_test("cTools.float.Vec4.*=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.*=Vec4")
add_test("cTools.float.Vec4./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4./=a")
add_test("cTools.float.Vec4./=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4./=Vec4")
add_test("cTools.float.Vec4.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.lengthSquared")
add_test("cTools.float.Vec4.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.length")
add_test("cTools.float.Vec4.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.normalize")
add_test("cTools.float.Vec4.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.GetNormalized")
add_test("cTools.float.Vec4.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.sum")
add_test("cTools.float.Vec4.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.sumAbs")
add_test("cTools.float.Vec4.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.emptyAND")
add_test("cTools.float.Vec4.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.emptyOR")
add_test("cTools.float.Vec4.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.string")
add_test("cTools.float.Vec4.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.mini")
add_test("cTools.float.Vec4.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.float.Vec4.maxi")

add_test("cTools.bool.Vec4.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.[]")
add_test("cTools.bool.Vec4.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.==a")
add_test("cTools.bool.Vec4.==Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.==Vec4")
add_test("cTools.bool.Vec4.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.!=a")
add_test("cTools.bool.Vec4.!=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.!=Vec4")
add_test("cTools.bool.Vec4.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.emptyAND")
add_test("cTools.bool.Vec4.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.emptyOR")
add_test("cTools.bool.Vec4.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.string")
add_test("cTools.bool.Vec4.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.mini")
add_test("cTools.bool.Vec4.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.bool.Vec4.maxi")

add_test("cTools.int.Vec4.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.[]")
add_test("cTools.int.Vec4.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.post++")
add_test("cTools.int.Vec4.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.post--")
add_test("cTools.int.Vec4.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.pre++")
add_test("cTools.int.Vec4.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.pre--")
add_test("cTools.int.Vec4.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.+=a")
add_test("cTools.int.Vec4.+=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.+=Vec4")
add_test("cTools.int.Vec4.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.-=a")
add_test("cTools.int.Vec4.-=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.-=Vec4")
add_test("cTools.int.Vec4.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.==a")
add_test("cTools.int.Vec4.==Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.==Vec4")
add_test("cTools.int.Vec4.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.!=a")
add_test("cTools.int.Vec4.!=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.!=Vec4")
add_test("cTools.int.Vec4.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.*=a")
add_test("cTools.int.Vec4.*=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.*=Vec4")
add_test("cTools.int.Vec4./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4./=a")
add_test("cTools.int.Vec4./=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4./=Vec4")
##add_test("cTools.int.Vec4.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.lengthSquared")
##add_test("cTools.int.Vec4.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.length")
##add_test("cTools.int.Vec4.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.normalize")
##add_test("cTools.int.Vec4.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.GetNormalized")
add_test("cTools.int.Vec4.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.sum")
add_test("cTools.int.Vec4.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.sumAbs")
add_test("cTools.int.Vec4.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.emptyAND")
add_test("cTools.int.Vec4.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.emptyOR")
add_test("cTools.int.Vec4.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.string")
add_test("cTools.int.Vec4.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.mini")
add_test("cTools.int.Vec4.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.int.Vec4.maxi")

add_test("cTools.uint.Vec4.[]" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.[]")
add_test("cTools.uint.Vec4.post++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.post++")
add_test("cTools.uint.Vec4.post--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.post--")
add_test("cTools.uint.Vec4.pre++" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.pre++")
add_test("cTools.uint.Vec4.pre--" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.pre--")
add_test("cTools.uint.Vec4.+=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.+=a")
add_test("cTools.uint.Vec4.+=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.+=Vec4")
add_test("cTools.uint.Vec4.-=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.-=a")
add_test("cTools.uint.Vec4.-=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.-=Vec4")
add_test("cTools.uint.Vec4.==a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.==a")
add_test("cTools.uint.Vec4.==Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.==Vec4")
add_test("cTools.uint.Vec4.!=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.!=a")
add_test("cTools.uint.Vec4.!=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.!=Vec4")
add_test("cTools.uint.Vec4.*=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.*=a")
add_test("cTools.uint.Vec4.*=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.*=Vec4")
add_test("cTools.uint.Vec4./=a" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4./=a")
add_test("cTools.uint.Vec4./=Vec4" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4./=Vec4")
##add_test("cTools.uint.Vec4.lengthSquared" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.lengthSquared")
##add_test("cTools.uint.Vec4.length" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.length")
##add_test("cTools.uint.Vec4.normalize" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.normalize")
##add_test("cTools.uint.Vec4.GetNormalized" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.GetNormalized")
add_test("cTools.uint.Vec4.sum" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.sum")
##add_test("cTools.uint.Vec4.sumAbs" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.sumAbs")
add_test("cTools.uint.Vec4.emptyAND" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.emptyAND")
add_test("cTools.uint.Vec4.emptyOR" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.emptyOR")
add_test("cTools.uint.Vec4.string" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.string")
add_test("cTools.uint.Vec4.mini" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.mini")
add_test("cTools.uint.Vec4.maxi" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT}" "cTools.uint.Vec4.maxi")
